[workspace]
members = [
    "axoproject",
    "cargo-dist",
    "cargo-dist-schema",
]
resolver = "2"
exclude = ["axoproject/tests/projects/"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axodotdev/cargo-dist"
homepage = "https://axodotdev.github.io/cargo-dist"
version = "0.30.3"
rust-version = "1.74"

[workspace.dependencies]
# intra-workspace deps (you need to bump these versions when you cut releases too!
cargo-dist-schema = { version = "=0.30.3", path = "cargo-dist-schema" }
axoproject = { version = "=0.30.3", path = "axoproject", default-features = false, features = ["cargo-projects", "generic-projects", "npm-projects"] }

# first-party deps
axocli = { version = "0.3.0" }
axoupdater = { version = "0.9.0", default-features = false, features = ["github_releases"] }
axotag = "0.3.0"
axoasset = { version = "1.3.0", features = ["json-serde", "toml-serde", "toml-edit", "yaml-serde", "compression", "remote"] }
axoprocess = { version = "0.2.1" }

# third-party deps
clap = { version = "4.5.53", features = ["derive"] }
console = { version = "0.16.1" }
clap-cargo = { version = "0.18.3" }
comfy-table = "7.2.1"
miette = { version = "7.6.0" }
thiserror = "2.0.17"
tracing = { version = "0.1.43", features = ["log"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.146" }
cargo_metadata = "0.23.1"
camino = { version = "1.2.1", features = ["serde1"] }
semver = "1.0.27"
newline-converter = "0.3.0"
dialoguer = "0.12.0"
sha2 = "0.10.9"
minijinja = { version = "2.14.0", features = ["debug", "loader", "builtins", "json", "custom_syntax"] }
include_dir = "0.7.4"
itertools = "0.14.0"
cargo-wix = "0.3.9"
uuid = { version = "1", features = ["v4"] }
mach_object = "0.1"
goblin = "0.10.4"
similar = "2.7.0"
tokio = { version = "1.48.0", features = ["full"] }
temp-dir = "0.1.16"
sha3 = "0.10.8"
blake2 = "0.10.6"
insta = { version = "1.45.0", features = ["filters"] }
tar = "0.4.44"
flate2 = "1.1.7"
pathdiff = { version = "0.2.3", features = ["camino"] }
url = "2.5.7"
parse-changelog = "0.6.14"
schemars = "1.1.0"
spdx = "0.13.3"
base64 = "0.22.1"
lazy_static = "1.5.0"
current_platform = "0.2.0"
color-backtrace = "0.7.2"
backtrace = "0.3.76"
target-lexicon = "0.13.2"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"
publish = false

[profile.dev]
# level true/2 is usually overkill, cf. <https://doc.rust-lang.org/cargo/reference/profiles.html#debug>
debug = "limited"
# thin-local LTO is basically free, cf. <https://doc.rust-lang.org/cargo/reference/profiles.html#lto>
lto = false
# this speeds up xz compression etc. significantly. we could
# be more selective about which packages to optimize but :shrug:
package."*" = { opt-level = 2 }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
