[package]
name = "axoproject"
description = "project detection logic for various axo.dev applications"
version = "0.17.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axodotdev/cargo-dist"
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generic-projects", "cargo-projects"]
generic-projects = ["semver"]
cargo-projects = ["guppy", "semver"]
npm-projects = ["oro-common", "oro-package-spec", "node-semver"]

[dependencies]
axoasset = { version = ">= 0.7.0, < 0.11.0", default-features = false, features = ["json-serde", "toml-edit", "toml-serde"] }
camino = { version = "1.1.4", default-features = true, features = ["serde1"] }
miette = "7.2.0"
guppy = { version = "0.17.5", optional = true }
tracing = "0.1.40"
oro-common = { version = "0.3.34", optional = true }
serde = "1.0.200"
semver = { version = "1.0.23", optional = true, default-features = true, features = ["serde"] }
node-semver = { version = "2.1.0", optional = true }
oro-package-spec = { version = "0.3.34", optional = true }
thiserror = "1.0.60"
pathdiff = { version = "0.2.1", features = ["camino"] }
itertools = "0.13.0"
url = "2.5.0"
parse-changelog = "0.6.8"
