[package]
name = "cargo-dist-schema"
description = "Schema information for cargo-dist's dist-manifest.json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

[dependencies]
# would be nice to inherit this from workspace but we don't want to pull in
# a full http client for the schema crate!
gazenot = { version = "0.3.0", default-features = false }

camino.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
target-lexicon.workspace = true

[dev-dependencies]
insta.workspace = true
