[package]
name = "dist-schema"
description = "Schema information for cargo-dist's dist-manifest.json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

[lib]
doctest = false

[dependencies]
gazenot = { workspace = true }

camino.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
target-lexicon.workspace = true

[dev-dependencies]
insta.workspace = true
