[package]
name = "cargo-dist"
description = "Shippable application packaging for Rust"
version = "0.15.0-prerelease.19"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axodotdev/cargo-dist"
homepage = "https://opensource.axo.dev/cargo-dist/"
readme = "../README.md"
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

[[bin]]
name = "cargo-dist"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "axocli", "serde_json", "console", "clap-cargo", "axoupdater"]
# Use bleeding edge features that might mess up people using 'cargo install'
# with older toolchains. This is used for our prebuilt binaries.
fear_no_msrv = ["axoprocess/stdout_to_stderr_modern"]

[dependencies]
# Features only used by the cli
clap = { version = "4.5.4", optional = true, features = ["derive"] }
serde_json = { version = "1.0.117", optional = true }
console = { version = "0.15.8", optional = true }
clap-cargo = { version = "0.14.0", optional = true }
axocli = { version = "0.2.0", optional = true }
axoupdater = { version = "0.6.4", optional = true }

# Features used by the cli and library
axotag = "0.2.0"
cargo-dist-schema = { version = "=0.15.0-prerelease.19", path = "../cargo-dist-schema" }
axoasset = { version = "0.9.3", features = ["json-serde", "toml-serde", "toml-edit", "compression", "remote"] }
axoprocess = { version = "0.2.0" }
axoproject = { version = "0.7.1", default-features = false, features = ["cargo-projects", "generic-projects"] }
gazenot = { version = "0.3.1" }
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls-tls"] }
comfy-table = "7.1.1"
miette = { version = "7.2.0" }
thiserror = "1.0.61"
tracing = { version = "0.1.36", features = ["log"] }
serde = { version = "1.0.202", features = ["derive"] }
cargo_metadata = "0.18.1"
camino = "1.1.7"
semver = "1.0.23"
newline-converter = "0.3.0"
dialoguer = "0.11.0"
sha2 = "0.10.6"
minijinja = { version = "1.0.21", features = ["debug", "loader", "builtins", "json", "custom_syntax"] }
include_dir = "0.7.3"
itertools = "0.13.0"
cargo-wix = "0.3.8"
uuid = { version = "1", features = ["v4"] }
mach_object = "0.1"
goblin = "0.8.2"
similar = "2.5.0"
tokio = { version = "1.37.0", features = ["full"] }
temp-dir = "0.1.13"
sha3 = "0.10.8"
blake2 = "0.10.6"

[dev-dependencies]
homedir = "0.2.1"
insta = { version = "1.39.0", features = ["filters"] }
tar = "0.4.38"
flate2 = "1.0.30"

[package.metadata.dist]
features = ["fear_no_msrv"]

[package.metadata.release]
pre-release-replacements = [
  {file="../CHANGELOG.md", search="# Unreleased", replace="# Unreleased\n\nNothing Yet!\n\n\n# Version {{version}} ({{date}})", exactly=1},
]
