[package]
name = "nonvirtual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
some-lib = { version = "0.1.0", path = "crates/some-lib" }
some-other-lib = { version = "0.1.0", path = "crates/some-other-lib" }

[workspace]
members = ["crates/*"]